center the title of plot
plot "Purchase by Age and City Category"

--- a/Visualizations.Rmd
+++ b/Visualizations.Rmd
@@ -166,7 +166,8 @@ data %>%
   geom_label(stat = "stratum", label.strata = TRUE) +
   scale_x_discrete(limits = c("Age", "City_Category"), expand = c(.05, .05)) +
   scale_fill_brewer(type = "qual", palette = "Set1") +
-  ggtitle("Purchase  by Age and City Category")
+  ggtitle("Purchase  by Age and City Category") +
+    theme(legend.position = "none", plot.title = element_text(hjust = 0.5))
 
 
 data %>% 
