--- a/Visualizations.Rmd
+++ b/Visualizations.Rmd
@@ -73,11 +73,11 @@ Type of variables: *Occupation*, *Product_Category_1*, *Product_Category_2* and 
 
 ```{r converTypeVariables, echo = TRUE, message = FALSE, warning = FALSE }
 
-data$Occupation         <- factor(data$Occupation, levels = c(1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19))
-data$Product_Category_1 <- factor(data$Product_Category_1, levels = c(1,2,3,4,5,6,7,8,10,11,12,13,15,16,18))
-data$Product_Category_2 <- factor(data$Product_Category_2, levels = c(2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18))
-data$Product_Category_3 <- factor(data$Product_Category_3, levels = c(3,4,5,6,8,9,10,11,13,14,15,16,17,18))
-data$Marital_Status     <- factor(data$Marital_Status, levels = c(0,1))
+data$Occupation         <- factor(data$Occupation,         levels = sort(unique(data$Occupation)))
+data$Product_Category_1 <- factor(data$Product_Category_1, levels = sort(unique(data$Product_Category_1)))
+data$Product_Category_2 <- factor(data$Product_Category_2, levels = sort(unique(data$Product_Category_2)))
+data$Product_Category_3 <- factor(data$Product_Category_3, levels = sort(unique(data$Product_Category_3)))
+data$Marital_Status     <- factor(data$Marital_Status,     levels = sort(unique(data$Marital_Status))
 
 ```
 
