come corrections - test

--- a/Analysis-sales data.Rmd
+++ b/Analysis-sales data.Rmd
@@ -5,38 +5,32 @@ output: html_document
 ---
 
 ```{r readLibraries, echo = FALSE, message=FALSE, warning=FALSE }
-
 require(dplyr)
 require(ggplot2)
 require(arules)
 require(arulesViz)
 require(tidyverse)
-
 load(file.path(getwd(), "data","data.Rdata"))
-
 ```
 <br/>
 <br/>
-# *Market Basket Analysis*
-## APRIORI Algorithm 
 
+## <span style="color:blue"> *Market Basket Analysis* </span>
+
+### **Apriori Algorithm** 
 Using this Apriori algorithm we can predict what products customers buy together. 
 This is Associations Rule Mining.
 The purpose of using Associations Rule Mining is found in retailing, clustering and classification.
 
-Store owners can use association rules for numerous marketing strategies for example:
-- changing the store layout,
-- customer behavior analysis,
-- what are the trending items customers buy?
+Store owners can use association rules for numerous marketing strategies for example:  
+* changing the store layout,  
+* customer behavior analysis,  
+* what are the trending items customers buy?  
 
-
-## Application in R 
-
+### Application in R 
 Firstly we have to get information about transactions from data. Each transaction shows items bought in that transaction and wchich User ID. 
 
-
-### Prepare data
-
+#### Prepare data
 First it's important to convert data frame into transaction data (transaction object --> `basket`). 
 ```{r prepareDataAprori, echo = TRUE, message = FALSE, warning = FALSE }
 products     <- data$Product_ID
@@ -44,6 +38,6 @@ users        <- as.factor(data$User_ID)
 sparse_matix <- split(products, users)
 basket       <- as(sparse_matix, "transactions")
 
-print(summary(basket))
+summary(basket)
 ```
 
