--- a/Visualizations.Rmd
+++ b/Visualizations.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Visualizations - sales data"
-output: md_document
+output: html_document
 always_allow_html: yes
 #output: html_document 
 ---
@@ -40,7 +40,7 @@ descriptionsFeatures <- describe_variables(data)
 # Data structure
 
 In dataset are 12 columns. The dataset contains different kinds of variables - numerical or categorical.
-I used my function `DescribeVariables()` to get more infromations about structure of data. You can find code of this function in script prepare_data_func.R  
+I used my function `describeVariables()` to get more infromations about structure of data. You can find code of this function in script prepare_data_func.R  
 Here the results:
 <br/>
 <br/>
@@ -59,20 +59,11 @@ kable(descriptionsFeatures, booktabs = T, caption = "Table 1: Structure of data"
 Type of variables: *Occupation*, *Product_Category_1*, *Product_Category_2* and *Marital_Status* is integer. It needed to conver types this variables to factor.
 
 ```{r converTypeVariables, echo = TRUE, message = FALSE, warning = FALSE }
-
 data$Occupation         <- factor(data$Occupation,         levels = sort(unique(data$Occupation)))
 data$Product_Category_1 <- factor(data$Product_Category_1, levels = sort(unique(data$Product_Category_1)))
 data$Product_Category_2 <- factor(data$Product_Category_2, levels = sort(unique(data$Product_Category_2)))
 data$Product_Category_3 <- factor(data$Product_Category_3, levels = sort(unique(data$Product_Category_3)))
 data$Marital_Status     <- factor(data$Marital_Status,     levels = sort(unique(data$Marital_Status)))
-
-
-```
-
-```{r saveRdata, echo = FALSE, message = FALSE, warning = FALSE }
-if(!file.exists(file.path(pathData, "data.Rdata")))
-  save(data, file = file.path(pathData, "data.Rdata"))
-
 ```
 
 <br/>
@@ -104,7 +95,16 @@ dataCustomer <- data %>%
 dataCustomer$mostChosenProduct1 <- factor(dataCustomer$mostChosenProduct1, levels = c(1,2,3,4,5,6,7,8,10,11,12,13,15,16,18))
 
 
-save(dataCustomer, file = file.path(pathData, "dataCustomer.Rdata"))
+
+```
+
+```{r saveRdata, echo = FALSE, message = FALSE, warning = FALSE }
+if(!file.exists(file.path(pathData, "data.Rdata")))
+  save(data, file = file.path(pathData, "data.Rdata"))
+
+if(!file.exists(file.path(pathData, "dataCustomer.Rdata")))
+  save(dataCustomer, file = file.path(pathData, "dataCustomer.Rdata"))
+
 ```
 <br/>
 <br/>
@@ -286,30 +286,10 @@ kable(data %>%
   column_spec(c(1, 2, 3), width = "4cm") %>%
   row_spec(0, bold = TRUE)
 
-
-
-
 colors<-grDevices::colors()
-
- with(data,
-      spineplot(x = Product_Category_1, y = Age, main = "Prefered Product Category 1 by Age Cutomer", col = sample(colors, 5)))
-
-
- with(data,
-      spineplot(x = Product_Category_1, y = City_Category,
-                main = "Prefered Product Category 1 by City Category", col = sample(colors, 5)))
-
-
- with(data,
-      spineplot(x = Product_Category_1, y = Gender,
-                main = "Prefered Product Category 1 by Gender", col = sample(colors, 5)))
-
- with(data,
-      spineplot(x = Product_Category_1, y = Marital_Status,
-                main = "Prefered Product Category 1 by Marital Status", col = sample(colors, 5)))
-
-
- with(data,
-      spineplot(x = Product_Category_1, y = Stay_In_Current_City_Years,
-                main = "Prefered Product Category 1 by Stay_In_Current_City_Years", col = sample(colors, 5)))
+visualizeSpineplots(variableX = "Product_Category_1", variableY = "Age", dataFrame = data)
+visualizeSpineplots(variableX = "Product_Category_1", variableY = "City_Category", dataFrame = data)
+visualizeSpineplots(variableX = "Product_Category_1", variableY = "Gender", dataFrame = data)
+visualizeSpineplots(variableX = "Product_Category_1", variableY = "Marital_Status", dataFrame = data)
+visualizeSpineplots(variableX = "Product_Category_1", variableY = "Stay_In_Current_City_Years", dataFrame = data)
 ```
